adjust the react-toastidy styling to match app and fix cramped text

--- a/GetMyTicket.Frontend/getmyticket/src/assets/style/css/style.css
+++ b/GetMyTicket.Frontend/getmyticket/src/assets/style/css/style.css
@@ -92,6 +92,12 @@ input[type=radio]:checked {
   background-color: rgb(177, 51, 51) !important;
 }
 
+.Toastify__toast {
+  line-height: 1.7;
+  font-family: inherit;
+  font-size: inherit;
+}
+
 .heading--primary {
   line-height: 1.4;
   letter-spacing: 1px;
