--- a/GetMyTicket.Frontend/getmyticket/src/assets/style/sass/_base.scss
+++ b/GetMyTicket.Frontend/getmyticket/src/assets/style/sass/_base.scss
@@ -113,3 +113,10 @@ input[type="radio"]:checked {
 .destructiveBtn {
   background-color: rgb(177, 51, 51) !important;
 }
+
+
+.Toastify__toast {
+  line-height: 1.7;
+  font-family: inherit;
+  font-size: inherit;
+}
